Final draft of completed website2

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ http://www.templatemo.com/tm-486-new-event
 				<h3 class="wow bounceIn" data-wow-delay="0.9s">27 September 2019, Mysuru, India</h3>
 				<h1 class="wow fadeInUp" data-wow-delay="1.6s">Open-Mic Night</h1>
 				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="2.3s">LEARN MORE</a>
-				<a href="register.aspera.in" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">REGISTER NOW</a>
+				<a href="http://register.aspera.in" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">REGISTER NOW</a>
 			</div>
 
 
@@ -300,7 +300,7 @@ http://www.templatemo.com/tm-486-new-event
 					<p>Aspera, the Entrepreneurship-Cell (also known as Startup Club) of Vidyavardhaka College of Engineering was set up to encourage entrepreneurship among students. It is a student driven community backed by the college management.</p>
 					<p>Aspera is connected to the National Entrepreneurship Network under the Wadhwani Foundation. Wadhwani Foundation is a non-profit organisation which inspires, educates and supports early-stage entrepreneurs.</p>
 					<p>Anyone can become a Startup Club member.Startup Club members participate in different sets of  programs organized through the Startup Club (100+  participating members).</p>
-					<a href="aspera.in" class="btn btn-danger">Know More</a>
+					<a href="http://aspera.in" class="btn btn-danger">Know More</a>
 				</div>
 			</div>
 
